test/error/ConstructorParameters.ci
public class Test
{
	public Test(int foo) { //ERROR: Expected ')', got identifier //ERROR: Constructor parameters not supported
	}
}
